--- a/RayCastEngine/RayCastEngine.csproj
+++ b/RayCastEngine/RayCastEngine.csproj
@@ -66,8 +66,8 @@
     <Compile Include="GameComponents\DungeonGenerator.cs" />
     <Compile Include="GameComponents\Engine.cs" />
     <Compile Include="GameComponents\DirectBitmap.cs" />
+    <Compile Include="GameComponents\Entitys.cs" />
     <Compile Include="GameComponents\Vector3.cs" />
-    <Compile Include="GameComponents\Sprite.cs" />
     <Compile Include="GameComponents\Types.cs" />
     <Compile Include="Views\Game.cs">
       <SubType>Form</SubType>
