--- a/RayCastEngine/RayCastEngine.csproj
+++ b/RayCastEngine/RayCastEngine.csproj
@@ -50,6 +50,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
+    <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -67,8 +69,13 @@
     <Compile Include="GameComponents\Engine.cs" />
     <Compile Include="GameComponents\DirectBitmap.cs" />
     <Compile Include="GameComponents\Entitys.cs" />
-    <Compile Include="GameComponents\Vector3.cs" />
     <Compile Include="GameComponents\Types.cs" />
+    <Compile Include="Views\FullGame.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FullGame.Designer.cs">
+      <DependentUpon>FullGame.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Game.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +91,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Types.cs" />
+    <Compile Include="XNAWinForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="XNAWinForm.Designer.cs">
+      <DependentUpon>XNAWinForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Views\Game.resx">
       <DependentUpon>Game.cs</DependentUpon>
     </EmbeddedResource>
