--- a/RayCastEngine/RayCastEngine.csproj
+++ b/RayCastEngine/RayCastEngine.csproj
@@ -65,10 +65,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameComponents\Controller.cs" />
     <Compile Include="GameComponents\DungeonGenerator.cs" />
     <Compile Include="GameComponents\Engine.cs" />
     <Compile Include="GameComponents\DirectBitmap.cs" />
     <Compile Include="GameComponents\Entitys.cs" />
+    <Compile Include="GameComponents\Sprite.cs" />
     <Compile Include="GameComponents\Types.cs" />
     <Compile Include="GameComponents\Vector.cs" />
     <Compile Include="Views\FullGame.cs">
