--- a/RayCastEngine/RayCastEngine.csproj
+++ b/RayCastEngine/RayCastEngine.csproj
@@ -76,6 +76,7 @@
     <Compile Include="GameComponents\Network.cs" />
     <Compile Include="GameComponents\Sprite.cs" />
     <Compile Include="GameComponents\Types.cs" />
+    <Compile Include="GameComponents\Weapon.cs" />
     <Compile Include="Views\FullGame.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +137,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\1.png" />
+    <None Include="Resources\2.png" />
+    <None Include="Resources\3.png" />
+    <None Include="Resources\4.png" />
     <None Include="Assets\Pictures\Textures\64\eagle.png" />
     <None Include="Assets\Pictures\Textures\64\barrel.png" />
     <None Include="Assets\Pictures\Textures\64\bluestone.png" />
