--- a/RayCastEngine/RayCastEngine.csproj
+++ b/RayCastEngine/RayCastEngine.csproj
@@ -139,6 +139,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\download.png" />
     <None Include="Resources\Bullet.png" />
     <None Include="Resources\1.png" />
     <None Include="Resources\2.png" />
